codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__apply_patch_hidden_diff_history.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: lines_to_single_string(&approved_lines)
---
• Edited files: README.md, src/lib.rs
