codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__completed_turn_history_renders_timestamp_separator.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: combined
---

› Add a timestamp to history


• Timestamp rendered.

─ 2026-04-08 03:04:05 +08:00 • Worked for 2.00s • 1 interaction round ──────────
