codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__realtime_audio_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Settings
  Configure UI and realtime settings for Codex.

› 1. UI  Configure local TUI-only transcript visibility for raw reasoning.

  Press enter to confirm or esc to go back
