codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__realtime_microphone_picker_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Microphone
  Saved devices apply to realtime voice only.

  1. System default                     Use your operating system default
                                        device.
›    Unavailable: Studio Mic (current)  Configured device is not currently
                                        available.
  3. Built-in Mic
  4. USB Mic

  Press enter to confirm or esc to go back
