codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_btw_usage_error.snap
---
source: tui/src/chatwidget/tests.rs
expression: rendered
---
■ Usage: /btw <temporary discussion prompt>
