codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_insight_report_ready_message.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: sanitized
---
• Insight report generated: $CODEX_HOME/reports/insight-<timestamp>.html Patterns and suggestions used local heuristics fallback in this build.
