codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_loop_usage_error.snap
---
source: tui/src/chatwidget/tests.rs
expression: rendered
---
■ Usage: /loop <duration|cron> <prompt> (for example: /loop 5m check status)
