codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_settings_popup_without_realtime_audio.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 284
expression: popup
---
  Settings
  Configure UI and realtime settings for Codex.

› 1. UI  Configure local TUI-only transcript visibility for reasoning, tool
         activity, and diffs.

  Press enter to confirm or esc to go back
